[package]
name = "OpenRNSAnalyzer"
version = "0.0.1"

[features]
default = ["num-bigint/serde"]

[dependencies]
clippy = { version = "*" }
libc = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
serde_yaml = "*"
num-bigint = "0.2"
num-traits = "0.2"
r2pipe = "0.7.0"
r2api = { path = "local-deps/radare2-r2pipe-api/rust" }
clap = "2.33"
tera = "1.17.1"
indicatif = "0.11.0"
log = "0.4"
env_logger = "0.6.2"
pest = "2.5.7"
pest_derive = "2.5.7"

[[bin]]
name = "open-rns-analyzer"
path = "src/main.rs"
